PvPGN Version History:

 Changelog for SVN TRUNK (since 1.8.4)
=========================================
 -- The list of changes mentioned in here is most propably incomplete.
 For more details also take a peek view into conversion-changelog.

[CMAKE]
  -- added cmake build system support

[WOL]
  -- completed support for all WOL clients (read IGNOREME.TXT)
  -- disable account creation via irc/wol when new_accounts=false
  -- added support to allow/deny WOL clients in bnetd.conf
  -- added support for battle clans
  -- added various protocol related fixes
  -- added apiregister support
  -- added autoupdate support for WOLv2 clients
  -- added variables into bnetd.conf for wol FTP update server specification
  -- fixed voice flag not shown for clients in channel
  -- fixed bug in RedAlert2/Yuri when game owner changes maximum players
  -- added QuickMatch support for RA2/YURI
  -- added Ladders support for Tiberian Sun and Red Alert 2 clients

[WAR3]
  -- added support for SRP3 based account creation/login
  -- added support for passchange for SRP3 based accounts

[MISC]
  -- added /clan whisper subcommand
  -- added /clan create/invite/disband subcommands
  -- added clan_min_invites to bnetd.conf for miminum accepted
     invitations need in clan-creating process (default is 2)
  -- added support for multilingual motd

 ChangeLog for 1.8.5 (since 1.8.4)
=========================================

[VCHECK]
  -- added STAR/SEXP IX86 1.16 and 1.16.1 vcheck entries

[WAR3]
  -- fixed bug when saved games could not be loaded
  -- fixed bug when clanmember can promote/demote any
     member of his clan by sending proper rankupdate packet
  -- fixed bug when a hosting bot was able to create a 
     custom game which caused clients to disconect

[MISC]
  -- updated IX86 autoupdate according to STAR/SEXP 1.16.1

 ChangeLog for 1.8.4 (since 1.8.3)
=========================================

[WAR3]
  -- fixed possible server crash on many ill-formated packets
  
[SQL]